--- a/courses/geom_modeling/index.html
+++ b/courses/geom_modeling/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <title>CMPSCI 590GM: Geometric Modeling</title>
@@ -92,7 +92,7 @@ Geometric Modeling<br>
   <p>Prerequisites for undergraduate students: CMPSCI 240 (Reasoning under uncertainty) and CMPSCI 311 (Theory of Algorithms). <br>
   There are no prerequisites for CMPSCI graduate students, although familiarity with computer graphics is useful (as covered in CMPSCI 473). <br>
   Permission of instructor for non-CMPSCI graduate students. </p>
-  <p> <strong><a href="http://graphics.stanford.edu/~kalo"></a></strong><a href="http://www.cs.umass.edu/~kalo">back to Evangelos Kalogerakis' page</a> </p>
+  <p> <strong><a href="https://graphics.stanford.edu/~kalo"></a></strong><a href="https://www.cs.umass.edu/~kalo">back to Evangelos Kalogerakis' page</a> </p>
 </div>
 </body>
 </html>
