--- a/courses/shape_understanding/index.html
+++ b/courses/shape_understanding/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <title>CMPSCI 791SU seminar - Machine Learning for Shape Understanding </title>
@@ -46,7 +46,7 @@ body {
   <li>      Write one-page reaction reports for the discussion papers.<br>
   <li>      Class discussion.<br>
   <li>      Research paper presentations.<br>
-  <li>      A term project. This should be an implementation of a shape understanding algorithm. Proposed projects are listed in the link &quot;Calendar and course material&quot; below. The result of the project should be a prototype with some preliminary results, or could  lead  to a submission of a nice research paper in the future. The project can also continue during the spring semester in my <a href="http://people.cs.umass.edu/~kalo/courses/geom_modeling/index.html">Geometric Modeling</a> course. </li>
+  <li>      A term project. This should be an implementation of a shape understanding algorithm. Proposed projects are listed in the link &quot;Calendar and course material&quot; below. The result of the project should be a prototype with some preliminary results, or could  lead  to a submission of a nice research paper in the future. The project can also continue during the spring semester in my <a href="https://kalo-ai.github.io/courses/geom_modeling/index.html">Geometric Modeling</a> course. </li>
 <h2>  Reaction Reports</h2>
   <p>For each class marked "Paper presentations and discussion" on the calendar, you should write up a one page "reaction" to one of the papers that is to be discussed that day. The first half of the report should contain discussion of one thing you liked or disliked about the paper. The second half should suggest an idea for "future work:" a possible extension or improvement to the paper. You do not need to write a report for days in which you present a paper.
 </p>
@@ -60,10 +60,10 @@ body {
   <h2>  Prerequisites</h2>
   <p>Familiarity with probability, statistics, and linear algebra is required. Experience with vision, graphics, or machine learning useful but not required.</p>
 <h2>Books </h2>
-  <p><strong>Daphne Koller and Nir Friedman, <a href="http://pgm.stanford.edu/">Probabilistic Graphical Models.</a></strong><br>
-    Christopher M. Bishop,<a href="http://research.microsoft.com/en-us/um/people/cmbishop/PRML/index.htm"> Pattern Recognition and Machine Learning</a>. <br>
+  <p><strong>Daphne Koller and Nir Friedman, <a href="https://pgm.stanford.edu/">Probabilistic Graphical Models.</a></strong><br>
+    Christopher M. Bishop,<a href="https://research.microsoft.com/en-us/um/people/cmbishop/PRML/index.htm"> Pattern Recognition and Machine Learning</a>. <br>
 <br>
-<strong><a href="http://graphics.stanford.edu/~kalo"></a></strong><a href="http://www.cs.umass.edu/~kalo">back to Evangelos Kalogerakis' page</a> </p>
+<strong><a href="https://graphics.stanford.edu/~kalo"></a></strong><a href="https://www.cs.umass.edu/~kalo">back to Evangelos Kalogerakis' page</a> </p>
 </div>
 </body>
 </html>
