--- a/datadrivenshape/index.html
+++ b/datadrivenshape/index.html
@@ -30,9 +30,9 @@
       <p><strong><em>Siggraph ASIA '16 course notes (latest version of our tutorial): <a href="data_driven_shape.pdf">PDF</a></em></strong></p>
       <p>&nbsp;</p>
       <h2>Segmentation/labeling datasets links:</h2>
-       <p><a href="http://segeval.cs.princeton.edu/">Princeton Segmentation Benchmark (PSB)</a></p>
-      <p><a href="http://people.cs.umass.edu/%7Ekalo/papers/LabelMeshes/">Labeled PSB dataset (L-PSB)</a></p>
-       <p><a href="http://web.siat.ac.cn/%7Eyunhai/ssl/ssd.htm">Shape COSEG dataset</a>      </p>
+       <p><a href="https://segeval.cs.princeton.edu/">Princeton Segmentation Benchmark (PSB)</a></p>
+      <p><a href="https://kalo-ai.github.io/papers/LabelMeshes/">Labeled PSB dataset (L-PSB)</a></p>
+       <p><a href="https://web.siat.ac.cn/%7Eyunhai/ssl/ssd.htm">Shape COSEG dataset</a>      </p>
       <p>&nbsp;</p>
       <h2>Results &amp; Code from data-driven segmentation methods:</h2>
       <table width="86%" border="1" align="center">
@@ -44,34 +44,34 @@
             <td width="19%" align="center"><strong>Source Code/Executable</strong></td>
           </tr>
           <tr>
-            <td align="center"><a href="http://people.cs.umass.edu/%7Ekalo/papers/LabelMeshes/">KHS10</a></td>
-            <td align="center"><a href="http://people.cs.umass.edu/%7Ekalo/papers/LabelMeshes/results.7z">Labeled shapes (L-PSB)</a></td>
-            <td align="center"><a href="http://people.cs.umass.edu/%7Ekalo/papers/LabelMeshes/">C++/Matlab code<br>
+            <td align="center"><a href="https://kalo-ai.github.io/papers/LabelMeshes/">KHS10</a></td>
+            <td align="center"><a href="https://kalo-ai.github.io/papers/LabelMeshes/results.7z">Labeled shapes (L-PSB)</a></td>
+            <td align="center"><a href="https://kalo-ai.github.io/papers/LabelMeshes/">C++/Matlab code<br>
             </a></td>
           </tr>
           <tr>
-            <td align="center"><a href="http://vladlen.info/publications/joint-shape-segmentation-with-linear-programming/">HKG11</a></td>
-            <td align="center"><a href="http://vladlen.info/papers/segmentation-supplementary.zip">Images of segmented shapes (PSB)</a></td>
+            <td align="center"><a href="https://vladlen.info/publications/joint-shape-segmentation-with-linear-programming/">HKG11</a></td>
+            <td align="center"><a href="https://vladlen.info/papers/segmentation-supplementary.zip">Images of segmented shapes (PSB)</a></td>
             <td align="center">–</td>
           </tr>
           <tr>
-            <td align="center"><a href="http://www.cs.sfu.ca/%7Eovankaic/personal/cosegmentation/">SvKK11</a></td>
-            <td align="center"><a href="http://www.cs.sfu.ca/%7Eovankaic/personal/cosegmentation/unsupervised_cosegmentation_supp_material.pdf">Images of labeled shapes (COSEG)</a></td>
+            <td align="center"><a href="https://www.cs.sfu.ca/%7Eovankaic/personal/cosegmentation/">SvKK11</a></td>
+            <td align="center"><a href="https://www.cs.sfu.ca/%7Eovankaic/personal/cosegmentation/unsupervised_cosegmentation_supp_material.pdf">Images of labeled shapes (COSEG)</a></td>
             <td align="center">–</td>
           </tr>
           <tr>
-            <td align="center"><a href="http://www.math.zju.edu.cn/ligangliu/CAGD/Projects/Cosegmentation/">HFL12</a></td>
-            <td align="center"><a href="http://www.math.zju.edu.cn/ligangliu/CAGD/Projects/Cosegmentation/Papers/CoSeg-suppl.pdf">Images of labeled shapes (COSEG)</a></td>
+            <td align="center"><a href="https://www.math.zju.edu.cn/ligangliu/CAGD/Projects/Cosegmentation/">HFL12</a></td>
+            <td align="center"><a href="https://www.math.zju.edu.cn/ligangliu/CAGD/Projects/Cosegmentation/Papers/CoSeg-suppl.pdf">Images of labeled shapes (COSEG)</a></td>
             <td align="center">–</td>
           </tr>
           <tr>
-            <td align="center"><a href="http://web.siat.ac.cn/%7Eyunhai/ssl/ssl.htm">WAvK12</a></td>
-            <td align="center"><a href="http://web.siat.ac.cn/%7Eyunhai/ssl/supp.pdf">Images of labeled shapes (COSEG)</a></td>
+            <td align="center"><a href="https://web.siat.ac.cn/%7Eyunhai/ssl/ssl.htm">WAvK12</a></td>
+            <td align="center"><a href="https://web.siat.ac.cn/%7Eyunhai/ssl/supp.pdf">Images of labeled shapes (COSEG)</a></td>
             <td align="center">–</td>
           </tr>
           <tr>
-            <td align="center"><a href="http://web.siat.ac.cn/%7Eyunhai/psa.html">WGW13</a></td>
-            <td align="center"><a href="http://web.siat.ac.cn/%7Eyunhai/psa/psa_supp.pdf">Images of various labeled shapes</a></td>
+            <td align="center"><a href="https://web.siat.ac.cn/%7Eyunhai/psa.html">WGW13</a></td>
+            <td align="center"><a href="https://web.siat.ac.cn/%7Eyunhai/psa/psa_supp.pdf">Images of various labeled shapes</a></td>
             <td align="center">–</td>
           </tr>
           <tr>
