--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Associate Professor of Computer Science</strong><br>
                   <p><br>
                     <strong> Quick links:</strong> <a href="#publications">Publications</a>, <a href="#courses">Course information</a>,<a href="#talks">
                       Talks</a>,<a href="#students"> Students</a>, <a href="#services">Academic
-                      Service</a>, <a href="http://scholar.google.com/citations?user=8TwcVQcAAAAJ">Google
+                      Service</a>, <a href="https://scholar.google.com/citations?user=8TwcVQcAAAAJ">Google
                       Scholar</a>, <a href="https://www.youtube.com/user/vkalogerakis">YouTube</a></p>
                   <p><strong>Research Interests and short bio:</strong> Evangelos Kalogerakis' research deals with the development
                     of graphics+vision algorithms and techniques, empowered by
@@ -201,7 +201,7 @@ Associate Professor of Computer Science</strong><br>
             <tr valign="middle">
               <td class="ptd" colspan="2" valign="middle">
                 <h2><a name="publications">Selected Publications</a></h2>
-                For a complete list, see <a href="http://scholar.google.com/citations?user=8TwcVQcAAAAJ">Google
+                For a complete list, see <a href="https://scholar.google.com/citations?user=8TwcVQcAAAAJ">Google
 					Scholar</a>. My students' names appear with <span class="student-color">brown font.</span>
               </td>
             </tr>
@@ -656,7 +656,7 @@ We demonstrate both quantitative and qualitative evaluation of the generated  te
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="http://mgadelha.me/selfsupacd/"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://mgadelha.me/selfsupacd/"><img
 
                     src="papers/eccv2020a.png" alt="Image" width="300"></a> </td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -664,7 +664,7 @@ We demonstrate both quantitative and qualitative evaluation of the generated  te
                   <p><strong>Label-Efficient Learning on Point Clouds using
                       Approximate Convex Decompositions</strong><br>
                       <i>[</i><i><a href="papers/more/acd-eccv20.pdf">PAPER</a>]
-                      </i><i>[<a href="http://mgadelha.me/selfsupacd/">PAGE WITH
+                      </i><i>[<a href="https://mgadelha.me/selfsupacd/">PAGE WITH
                           CODE &amp; DATA</a>]</i><br>
                     <i>Matheus Gadelha, Aruni RoyChowdhury, <span class="student-color">Gopal Sharma</span>, Evangelos Kalogerakis, Liangliang Cao, Erik
                         Learned-Miller, Rui Wang, Subhransu Maji<br>
@@ -923,7 +923,7 @@ Proceedings of the European Conference on Computer
                 <div align="justify">
                   <p><span><strong>Deep Part Induction from Articulated Object
                         Pairs</strong><br>
-                      </span><i> [</i><span><i><a href="https://people.cs.umass.edu/%7Ekalo/papers/partinduction/partinduction.pdf">PAPER</a>]
+                      </span><i> [</i><span><i><a href="https://kalo-ai.github.io/papers/partinduction/partinduction.pdf">PAPER</a>]
                           [<a href="https://github.com/ericyi/articulated-part-induction/">PAGE
                             WITH CODE &amp; DATA</a>]</i></span><span> </span><span><br>
                       </span><span><em>Li Yi, <span class="student-color">Haibin Huang</span>, <span class="student-color">Difan Liu</span>, Evangelos Kalogerakis, Hao Su, Leonidas Guibas</em><br>
@@ -965,16 +965,16 @@ Proceedings of the European Conference on Computer
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="http://people.umass.edu/%7Eyangzhou/visemenet/"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://people.umass.edu/%7Eyangzhou/visemenet/"><img
 
                     src="papers/siggraph2018.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
                 <div align="justify">
                   <p><span><strong>VisemeNet: Audio-Driven Animator-Centric
                         Speech Animation</strong><br>
-                      </span><i>[</i><span><i><a href="https://people.cs.umass.edu/%7Ekalo/papers/visemenet/visemenet.pdf">PAPER</a>][<a
+                      </span><i>[</i><span><i><a href="https://kalo-ai.github.io/papers/visemenet/visemenet.pdf">PAPER</a>][<a
 
-                            href="https://youtu.be/kk2EnyMD3mo">VIDEO</a>][<a href="http://people.umass.edu/%7Eyangzhou/visemenet/">PAGE
+                            href="https://youtu.be/kk2EnyMD3mo">VIDEO</a>][<a href="https://people.umass.edu/%7Eyangzhou/visemenet/">PAGE
                             WITH CODE &amp; DATA</a>]</i></span><span><br>
                       </span><span><em><span class="student-color">Yang Zhou</span>, <span class="student-color">Zhan Xu</span>, Chris Landreth, Evangelos Kalogerakis, Subhransu Maji, Karan Singh</em><br>
                       </span><i>ACM Transactions on Graphics, Vol. 37, No. 4,
@@ -1059,7 +1059,7 @@ Proceedings of the European Conference on Computer
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="http://vis-www.cs.umass.edu/splatnet/"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://vis-www.cs.umass.edu/splatnet/"><img
 
                     src="papers/cvpr18a.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -1068,7 +1068,7 @@ Proceedings of the European Conference on Computer
                         Cloud Processing</strong><br>
                       </span><i>[<a href="papers/SplatNet/SPLATNet.pdf">PAPER</a>][<a
 
-                          href="http://vis-www.cs.umass.edu/splatnet/">PAGE WITH
+                          href="https://vis-www.cs.umass.edu/splatnet/">PAGE WITH
                           CODE &amp; DATA</a>]</i><span><br>
                       </span><span><em>Hang Su, Varun Jampani, Deqing Sun,
                           Subhransu Maji, Evangelos Kalogerakis, Ming-Hsuan
@@ -1193,7 +1193,7 @@ Proceedings of the European Conference on Computer
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="http://i.cs.hku.hk/%7Exghan/Projects/shapecomp.htm"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://i.cs.hku.hk/%7Exghan/Projects/shapecomp.htm"><img
 
                     src="papers/iccv17.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -1202,7 +1202,7 @@ Proceedings of the European Conference on Computer
                       Networks for Global Structure and Local Geometry Inference</strong><br>
                     <i>[<a href="papers/ShapePatchNet/shape_patchnet_iccv.pdf">PAPER</a>][<a
 
-                          href="http://i.cs.hku.hk/%7Exghan/Projects/shapecomp.htm">PAGE</a>]</i><span><br>
+                          href="https://i.cs.hku.hk/%7Exghan/Projects/shapecomp.htm">PAGE</a>]</i><span><br>
                       </span><i><span>Xiaoguang Han*, Zhen Li*, <span class="student-color">Haibin Huang</span>,
                           Evangelos Kalogerakis, Yizhou Yu<br>
                         </span></i><em>(* indicates equal contribution) </em><i><span><br>
@@ -1239,7 +1239,7 @@ Proceedings of the European Conference on Computer
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="http://people.cs.umass.edu/%7Ekalo/papers/SketchModeling/"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://kalo-ai.github.io/papers/SketchModeling/"><img
 
                     src="papers/3DV_2017.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -1248,7 +1248,7 @@ Proceedings of the European Conference on Computer
                         Multi-view Convolutional Networks</strong><br>
                       </span><i>[<a href="papers/SketchModeling/sketch_modeling.pdf">PAPER</a>][<a
 
-                          href="http://people.cs.umass.edu/%7Ekalo/papers/SketchModeling/">PAGE
+                          href="https://kalo-ai.github.io/papers/SketchModeling/">PAGE
                           WITH CODE &amp; DATA</a>]</i><span><br>
                       </span><i><span class="student-color">Zhaoliang Lun</span>, Matheus Gadelha, Evangelos Kalogerakis, Subhransu Maji, Rui Wang<br>
 Proceedings of the International Conference on 3D
@@ -1280,13 +1280,13 @@ Proceedings of the International Conference on 3D
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" width="270" valign="middle"><a href="https://people.cs.umass.edu/%7Ekalo/papers/PatternGrouping/"><img
+              <td class="ptd" width="270" valign="middle"><a href="https://kalo-ai.github.io/papers/PatternGrouping/"><img
 
                     src="papers/sigasia2017.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
                 <div align="justify">
                   <p><strong>Learning to Group Discrete Graphical Patterns<br>
-                  </strong> <em>[<a href="papers/PatternGrouping/PatternGrouping.pdf">PAPER</a>][<a href="https://people.cs.umass.edu/%7Ekalo/papers/PatternGrouping/">PAGE</a>]</em><span><br>
+                  </strong> <em>[<a href="papers/PatternGrouping/PatternGrouping.pdf">PAPER</a>][<a href="https://kalo-ai.github.io/papers/PatternGrouping/">PAGE</a>]</em><span><br>
                       </span><em><span class="student-color">Zhaoliang Lun</span>*, Changqing Zou*, <span class="student-color">Haibin Huang</span>, Evangelos Kalogerakis, Ping Tan, Marie-Paule Cani, Hao
                         Zhang </em><span><br>
                       </span><em>(* indicates equal contribution) </em><span><br>
@@ -1448,17 +1448,17 @@ Computer Graphics Forum</span><span>, </span>Vol. 36,
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="https://people.cs.umass.edu/%7Ekalo/papers/StyleTransfer/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://kalo-ai.github.io/papers/StyleTransfer/"><img
 
                     src="papers/sigasia2016.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
                 <div align="justify">
                   <p><b>Functionality Preserving Shape Style Transfer<br>
-                  </b> <i>[</i><span><i><a href="https://people.cs.umass.edu/%7Ekalo/papers/StyleTransfer/StyleTransfer.pdf">PAPER</a>][<a
+                  </b> <i>[</i><span><i><a href="https://kalo-ai.github.io/papers/StyleTransfer/StyleTransfer.pdf">PAPER</a>][<a
 
                             href="https://youtu.be/R-1jhH4sbRk?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                            href="https://people.cs.umass.edu/%7Ekalo/papers/StyleTransfer/">PAGE
+                            href="https://kalo-ai.github.io/papers/StyleTransfer/">PAGE
                             WITH CODE &amp; DATA</a>]</i><br>
                       </span><i><span><span class="student-color">Zhaoliang Lun</span>, Evangelos Kalogerakis, Rui
                           Wang, Alla Sheffer<br>
@@ -1551,7 +1551,7 @@ Computer Graphics Forum</span><span>, </span>Vol. 36,
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="http://vis-www.cs.umass.edu/mvcnn/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://vis-www.cs.umass.edu/mvcnn/"><img
 
                     src="papers/iccv15.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -1562,7 +1562,7 @@ Computer Graphics Forum</span><span>, </span>Vol. 36,
 
                           href="https://youtu.be/QQbOy6J2PI0?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                          href="http://vis-www.cs.umass.edu/mvcnn/">PAGE WITH
+                          href="https://vis-www.cs.umass.edu/mvcnn/">PAGE WITH
                           CODE &amp; DATA</a>]</i><span><br>
                       </span><i><span>Hang Su, Subhransu Maji, Evangelos Kalogerakis, Erik Learned-Miller<br>
                         </span>Proceedings of the International Conference on
@@ -1600,7 +1600,7 @@ Computer Graphics Forum</span><span>, </span>Vol. 36,
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="http://people.cs.umass.edu/%7Ekalo/papers/StyleSimilarity/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://kalo-ai.github.io/papers/StyleSimilarity/"><img
 
                     src="papers/siggraph2015.jpg" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle" align="right">
@@ -1611,7 +1611,7 @@ Computer Graphics Forum</span><span>, </span>Vol. 36,
 
                           href="https://youtu.be/PWqZwpHQtnE?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                          href="http://people.cs.umass.edu/%7Ekalo/papers/StyleSimilarity/">PAGE
+                          href="https://kalo-ai.github.io/papers/StyleSimilarity/">PAGE
                           WITH CODE &amp; DATA</a>]</i><span><br>
                       </span><i><span><span class="student-color">Zhaoliang Lun</span>, Evangelos Kalogerakis, Alla
                           Sheffer<br>
@@ -1748,7 +1748,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="http://www.cs.ubc.ca/%7Echyma/publications/st/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://www.cs.ubc.ca/%7Echyma/publications/st/"><img
 
                     src="papers/eg2014.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle">
@@ -1758,7 +1758,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
 
                           href="https://youtu.be/h0xF6R5MpyA?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                          href="http://www.cs.ubc.ca/%7Echyma/publications/st/">PAGE</a>]</i><span><br>
+                          href="https://www.cs.ubc.ca/%7Echyma/publications/st/">PAGE</a>]</i><span><br>
                       </span><em>Chongyang Ma, <span class="student-color">Haibin Huang</span>, Alla Sheffer, Evangelos Kalogerakis, Rui Wang</em><span><br>
                       </span><i><span> Computer Graphics Forum, Vol. 33, No. 2,
                           2014<br>
@@ -1784,7 +1784,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="http://www.cs.cornell.edu/%7Esidch/projects/attribit/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://www.cs.cornell.edu/%7Esidch/projects/attribit/"><img
 
                     src="papers/AttribIT.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle">
@@ -1795,7 +1795,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
 
                           href="https://youtu.be/U_XfYzy2c9w?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                          href="http://www.cs.cornell.edu/%7Esidch/projects/attribit/">PAGE</a>]</i><span><br>
+                          href="https://www.cs.cornell.edu/%7Esidch/projects/attribit/">PAGE</a>]</i><span><br>
                       </span><em>Siddhartha Chaudhuri*, <span><strong>Evangelos
                           Kalogerakis*</strong></span><span>, Stephen Giguere, Thomas
                           Funkhouser</span></em><span><br>
@@ -1828,7 +1828,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="http://people.cs.umass.edu/%7Eyhzhou/Site/elastoplastic/index.htm"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="https://people.cs.umass.edu/%7Eyhzhou/Site/elastoplastic/index.htm"><img
 
                     src="papers/pg13.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle">
@@ -2395,19 +2395,19 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                             2017 workshop</a>: <a href="https://sites.google.com/site/deepgeometry2017/">Deep
                             Learning Meets Geometry</a>] <a href="talks/CVPR17_Tutorial_MVCNN_3DCNN_v3.pdf"><br>
                             CVPR 2017 Tutorial on 3D Deep learning - Multi-view
-                            techniques</a> [<a href="http://3ddl.stanford.edu/">CVPR
+                            techniques</a> [<a href="https://3ddl.stanford.edu/">CVPR
                             2017 tutorials</a>]<br>
                           <a href="talks/mvcnn-shape-analysis.pdf">3D Shape
                             Analysis with Multi-view Convolutional Networks</a>
-                          [<a href="http://nesg.graphics/">New England Symposium
+                          [<a href="https://nesg.graphics/">New England Symposium
                             on Graphics 2017</a>]<br>
                           <a href="talks/Machine_Learning_for_Shape_Analysis_and_Processing.pdf">Machine
-                            Learning for Shape Analysis and Processing</a> [<a href="http://eurographics2016.pt/state-of-the-art-reports-2/">EG
+                            Learning for Shape Analysis and Processing</a> [<a href="https://eurographics2016.pt/state-of-the-art-reports-2/">EG
                             2016 tutorial &amp; state-of-the-art report
                             presentation</a>]<br>
                           <a href="talks/machine_learning_techniques_for_geometric_modeling.pdf">
                             Machine Learning Techniques for Geometric Modeling</a>
-                          [<a href="http://www.geometrie.tugraz.at/sgp2015/gradschool.php">SGP
+                          [<a href="https://www.geometrie.tugraz.at/sgp2015/gradschool.php">SGP
                             2015 grad school</a>]<br>
                           <a href="talks/Data_driven_3D_Shape_Analysis_And_Synthesis.pdf">
                             Data-Driven Shape Analysis and Synthesis</a>
