--- a/papers/PatternGrouping/index.html
+++ b/papers/PatternGrouping/index.html
@@ -20,10 +20,10 @@
 	</h1>
 	<div id="header">
 		<p id="people">
-			<a href="https://people.cs.umass.edu/~zlun/">Zhaoliang Lun*</a>,
+			<a href="https://happylun.github.io/">Zhaoliang Lun*</a>,
 			<a href="https://changqingzou.weebly.com/">Changqing Zou*</a>,
-			<a href="https://people.cs.umass.edu/~hbhuang/">Haibin Huang</a>,
-			<a href="https://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
+			<a href="https://brotherhuang.github.io/">Haibin Huang</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
 			<a href="https://www.cs.sfu.ca/~pingtan/">Ping Tan</a>,
 			<a href="https://team.inria.fr/imagine/marie-paule-cani/">Marie-Paule Cani</a>,
 			<a href="https://www.cs.sfu.ca/~haoz/">Hao Zhang</a>
@@ -58,13 +58,13 @@
 	<p id="text">
 		The following file contains all images used in our test set, as well as the human-annotated groups and our grouping results. Please refer to our paper for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSimilarity/PatternAnalysis/Supplementary.pdf">Supplementary.pdf</a>, 23 MB</p>
+	<p>&#x25BA;<a href="https://drive.google.com/file/d/1X-xlNrlrZv6yIwFevrmzJQNLnb1A-FDC/view?usp=sharing">Supplementary.pdf</a>, 23 MB</p>
 	<h2>Data</h2>
 	<p id="text">
 		The following archives contain training data and testing data used in our experiments. Please read the readme file within the archive for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSimilarity/PatternAnalysis/TrainData.7z">TrainData.7z</a>, 272 MB</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSimilarity/PatternAnalysis/TestData.7z">TestData.7z</a>, 12 MB</p>
+	<p>&#x25BA;<a href="https://drive.google.com/file/d/14n0HAZz1x38fgB3kHKZQdP1gq4YjEuEn/view?usp=sharing">TrainData.7z</a>, 272 MB</p>
+	<p>&#x25BA;<a href="https://drive.google.com/file/d/1CYVrBSYqg-eN8gs9XPTQjIoD3N21VrMR/view?usp=sharing">TestData.7z</a>, 12 MB</p>
 	<h2>Presentation</h2>
 	<p id="text">
 		The following files contain the slides presented in SIGGRAPH ASIA 2017 at Bangkok.
@@ -83,7 +83,7 @@
 		Tan acknowledges support from NSERC Canada (Grant NO.: 31-611663 and 31-611664). 
 		Zhang acknowledges support from NSERC Canada (Grant NO.: 611370 and 611649), and gift funds from Adobe Research.
 	</p>
-	<div id="footer"><a href="http://people.cs.umass.edu/~kalo/">back to Evangelos Kalogerakis' page</a></div>
+	<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 </div>
 </body>
 </html>
