--- a/papers/ShapeSynthesis/index.html
+++ b/papers/ShapeSynthesis/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <title>A Probabilistic Model of Component-Based Shape Synthesis</title>
@@ -28,8 +28,8 @@ body {
 <div id="content">
   <h1 align="center">A Probabilistic Model of Component-Based Shape Synthesis<br>
   </h1>
-  <p align="center"><a href="http://graphics.stanford.edu/~kalo"><br>
-  Evangelos Kalogerakis</a>,<a href="http://graphics.stanford.edu/~sidch/"> Siddhartha Chaudhuri</a>, <a href="http://ai.stanford.edu/~koller/">Daphne Koller</a>, <a href="http://vladlen.org/">Vladlen Koltun</a></p>
+  <p align="center"><a href="https://graphics.stanford.edu/~kalo"><br>
+  Evangelos Kalogerakis</a>,<a href="https://graphics.stanford.edu/~sidch/"> Siddhartha Chaudhuri</a>, <a href="https://ai.stanford.edu/~koller/">Daphne Koller</a>, <a href="https://vladlen.org/">Vladlen Koltun</a></p>
   <p align="center"> <em>ACM Transactions on Graphics, Vol. 31, No. 4, July 2012 (Proc. SIGGRAPH 2012)</em></p>
   <p align="center"><strong>Preprint:  <a href="ShapeSynthesis.pdf">[PDF]</a></strong></p>
   <img alt="teaser" align="middle" src="ShapeSynthesis_teaser.jpg">
@@ -53,12 +53,12 @@ body {
   <p>&nbsp;</p>
   <h2>Video<br>
   </h2>
-<iframe title="YouTube video player" width="728" height="510" src="http://www.youtube.com/embed/VcK2z6AOZcA" frameborder="1px" allowfullscreen></iframe>
+<iframe title="YouTube video player" width="728" height="510" src="https://www.youtube.com/embed/VcK2z6AOZcA" frameborder="1px" allowfullscreen></iframe>
 
 
 <h2>&nbsp;</h2>
 <h2>Results</h2>
-  <p>The following archive contains images of our training and synthesized shapes for each of our datasets. Due to license restrictions by <a href="http://digimation.com/">Digimation</a>, we cannot  release  the output meshes here. If you acquire the <a href="http://digimation.com/">Digimimation &quot;Modelbank&quot; and &quot;The Archive&quot;</a> and confirm with Digimation that we can share the output models with your institution, then we will send them to you. <a href="https://drive.google.com/file/d/1jS22J2i82IF8F_s1Siu82auHXsUXh9uB/view?usp=sharing"><br>
+  <p>The following archive contains images of our training and synthesized shapes for each of our datasets. Due to license restrictions by <a href="https://digimation.com/">Digimation</a>, we cannot  release  the output meshes here. If you acquire the <a href="https://digimation.com/">Digimimation &quot;Modelbank&quot; and &quot;The Archive&quot;</a> and confirm with Digimation that we can share the output models with your institution, then we will send them to you. <a href="https://drive.google.com/file/d/1jS22J2i82IF8F_s1Siu82auHXsUXh9uB/view?usp=sharing"><br>
   ShapeSynthesisResults.7z</a>, 105MB. </p>
   <h2>  Code</h2>
   <p>The following archive contains the implementation of the probabilistic model. <br>
@@ -70,7 +70,7 @@ body {
     <a href="gen_prob_model_of_shapes_web.pdf">Adobe PDF version of presentation</a>, 3.4MB</p>
 <h2>Acknowledgements</h2>
  We are grateful to Aaron Hertzmann, Sergey Levine, and Philipp Kr&auml;henb&uuml;l for their comments on this paper, and to Tom Funkhouser for helpful discussions. We also thank Szymon Rusinkiewicz for the Trimesh2 library. This research was conducted in conjunction with the Intel Science and Technology Center for Visual Computing, and was supported in part by KAUST Global Collaborative Research and by NSF grants SES-0835601 and CCF-0641402.
- <div id="footer"><a href="http://graphics.stanford.edu/~kalo">back to Evangelos Kalogerakis' page</a></div>
+ <div id="footer"><a href="https://graphics.stanford.edu/~kalo">back to Evangelos Kalogerakis' page</a></div>
 </div>
 </body>
 </html>
