--- a/papers/SketchModeling/index.html
+++ b/papers/SketchModeling/index.html
@@ -22,7 +22,7 @@
 		<p id="people">
 			<a href="https://people.cs.umass.edu/~zlun/">Zhaoliang Lun</a>,
 			<a href="https://people.cs.umass.edu/~mgadelha/">Matheus Gadelha</a>,
-			<a href="https://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
 			<a href="https://people.cs.umass.edu/~smaji/">Subhransu Maji</a>,
 			<a href="https://people.cs.umass.edu/~ruiwang/">Rui Wang</a>
 		</p>
@@ -68,8 +68,8 @@
 		The following archives contain data for training / testing our algorithm. Please read the readme file in the codes for instructions on how to use them.
 	</p>
 	<p>&#x25BA;<a href="TestingData.7z">TestingData.7z</a>, 7 MB</p>
-	<p>&#x25BA;<a href="http://neghvar.cs.umass.edu/public_data/zhaoliang_lun_trainingdata.7z">TrainingData.7z</a>, 14 GB</p>
-	<p>&#x25BA;<a href="http://neghvar.cs.umass.edu/public_data/zhaoliang_lun_checkpoint.7z">Checkpoint.7z </a>, 12 GB</p>
+	<p>&#x25BA;<a href="https://neghvar.cs.umass.edu/public_data/zhaoliang_lun_trainingdata.7z">TrainingData.7z</a>, 14 GB</p>
+	<p>&#x25BA;<a href="https://neghvar.cs.umass.edu/public_data/zhaoliang_lun_checkpoint.7z">Checkpoint.7z </a>, 12 GB</p>
 	<i><a href="download.txt">(Error in downloading the gigantic files?)</a></i>
  	<h2>Presentation</h2>
 	<p id="text">
@@ -85,7 +85,7 @@
 	<p id="text">
 		We acknowledge support from NSF (CHS-1422441, CHS-1617333, IIS-1617917,  IIS-1423082), Adobe, NVidia, and Facebook. Our  experiments were performed in the UMass GPU cluster obtained under a grant from the Collaborative R&amp;D Fund managed by the Massachusetts Technology Collaborative.
 	</p>
-	<div id="footer"><a href="http://people.cs.umass.edu/~kalo/">back to Evangelos Kalogerakis' page</a></div>
+	<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 </div>
 </body>
 </html>
