--- a/papers/StyleSimilarity/index.html
+++ b/papers/StyleSimilarity/index.html
@@ -20,9 +20,9 @@
 	</h1>
 	<div id="header">
 		<p id="people">
-			<a href="http://people.cs.umass.edu/~zlun/">Zhaoliang Lun</a>,
-			<a href="http://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
-			<a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>
+			<a href="https://people.cs.umass.edu/~zlun/">Zhaoliang Lun</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
+			<a href="https://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>
 		</p>	
 		<p><em>ACM Transactions on Graphics (Proc. ACM SIGGRAPH 2015)</em></p>
 		<p><strong>Preprint:  <a href="StyleSimilarity.pdf">[PDF]</a></strong></p>
@@ -62,7 +62,7 @@
 	<p id="text">
 		The following archive contains source codes for our algorithm. Please read the readme file within the archive for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSimilarity/Code.7z">Code.7z</a>, 4 MB <i>(Updated: 2015 / 12 / 29)</i></p>
+	<p>&#x25BA;<a href="Code.7z">Code.7z</a>, 4 MB <i>(Updated: 2015 / 12 / 29)</i></p>
 	<p>&#x25BA;<a href="https://github.com/happylun/StyleSimilarity">Fork me on GitHub.</a></p>
 	<h2>Data</h2>
 	<p id="text">
@@ -84,7 +84,7 @@
 	<p id="text">
 		Kalogerakis gratefully acknowledges support from NSF (CHS-1422441). Sheffer gratefully acknowledges support from NSERC and GRAND NCE. We thank Nicholas Vining and Mikhail Bessmeltsev for their valuable help in editing the paper and the video. We thank the anonymous reviewers for their comments.
 	</p>
-	<div id="footer"><a href="http://people.cs.umass.edu/~kalo/">back to Evangelos Kalogerakis' page</a></div>
+	<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 </div>
 </body>
 </html>
