--- a/papers/StyleTransfer/index.html
+++ b/papers/StyleTransfer/index.html
@@ -21,7 +21,7 @@
 	<div id="header">
 		<p id="people">
 			<a href="https://people.cs.umass.edu/~zlun/">Zhaoliang Lun</a>,
-			<a href="https://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
 			<a href="https://people.cs.umass.edu/~ruiwang/">Rui Wang</a>,
 			<a href="https://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>
 		</p>	
@@ -58,18 +58,18 @@
 	<p id="text">
 		The following archive contains more style transfer results generated from our algorithm and extra user study data. Please refer to our paper for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSynthesis/supplementary.7z">supplementary.7z</a>, 28 MB</p>
+	<p>&#x25BA;<a href="supplementary.7z">supplementary.7z</a>, 28 MB</p>
 	<h2>Code</h2>
 	<p id="text">
 		The following archive contains source codes for our algorithm. Please read the readme file within the archive for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSynthesis/code.7z">code.7z</a>, 5 MB</p>
+	<p>&#x25BA;<a href="code.7z">code.7z</a>, 5 MB</p>
 	<p>&#x25BA;<a href="https://github.com/happylun/StyleTransfer">Fork me on GitHub.</a></p>
 	<h2>Data</h2>
 	<p id="text">
 		The following archive contains data for demonstrating the style transfer algorithm. Please read the readme file within the archive for more details.
 	</p>
-	<p>&#x25BA;<a href="http://antares.cs.umass.edu/project_data/StyleSynthesis/data.7z">data.7z</a>, 1 MB</p>
+	<p>&#x25BA;<a href="data.7z">data.7z</a>, 1 MB</p>
 	<h2>Presentation</h2>
 	<p id="text">
 		The following files contain the slides presented in SIGGRAPH ASIA 2016 at Macao.
@@ -87,7 +87,7 @@
 		for proofreading the paper and narrating the video, Mikhail Bessmeltsev for useful suggestions on the
 		figures, and the anonymous reviewers for their comments.
 	</p>
-	<div id="footer"><a href="http://people.cs.umass.edu/~kalo/">back to Evangelos Kalogerakis's page</a></div>
+	<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis's page</a></div>
 </div>
 </body>
 </html>
