--- a/papers/assembly/index.html
+++ b/papers/assembly/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -19,10 +19,10 @@
 
 <h1>Probabilistic Reasoning for Assembly-Based 3D Modeling</h1>
 <br>
-<a href=http://cs.stanford.edu/~sidch>Siddhartha&nbsp;Chaudhuri</a>,
-<a href=http://graphics.stanford.edu/~kalo>Evangelos&nbsp;Kalogerakis</a>,
-<a href=http://cs.stanford.edu/~guibas>Leonidas&nbsp;Guibas</a>, and
-<a href=http://cs.stanford.edu/~vladlen>Vladlen&nbsp;Koltun</a>
+<a href=https://cs.stanford.edu/~sidch>Siddhartha&nbsp;Chaudhuri</a>,
+<a href=https://kalo-ai.github.io/>Evangelos&nbsp;Kalogerakis</a>,
+<a href=https://cs.stanford.edu/~guibas>Leonidas&nbsp;Guibas</a>, and
+<a href=https://cs.stanford.edu/~vladlen>Vladlen&nbsp;Koltun</a>
 <br><br>
 
 <em>ACM Transactions on Graphics Vol. 30, No. 4 (Proc. SIGGRAPH 2011)</em><br>
@@ -44,7 +44,7 @@ To facilitate rapid creation of detailed 3D models by novices, we have developed
 <h1>Video</h1>
 
 <br>
-<iframe title="YouTube video player" width="728" height="510" src="http://www.youtube.com/embed/7Abki79WIOY" frameborder="1px" allowfullscreen></iframe>
+<iframe title="YouTube video player" width="728" height="510" src="https://www.youtube.com/embed/7Abki79WIOY" frameborder="1px" allowfullscreen></iframe>
 
 <br><br>
 <h1>Evaluation</h1>
@@ -84,7 +84,7 @@ The individual components and modeling times for models created by participants 
 <a href=images/components.jpg><img src=images/components_small.jpg></a>
 
 
-  <div id="footer"><a href="http://graphics.stanford.edu/%7Ekalo">back to Evangelos Kalogerakis' page</a></div>
+  <div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 
 </div>
 </center>
