--- a/papers/curvature/index.html
+++ b/papers/curvature/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
 <title>Robust Statistical Estimation of Differential Properties on Surfaces</title>
@@ -30,10 +30,10 @@ BODY {
     <img align="middle" src="curvature_teaser.jpg">
   <h2>People</h2>
   <ul id="people">
-    <li><a href="http://www.dgp.toronto.edu/%7Ekalo/">Evangelos Kalogerakis</a> </li>
-    <li><a href="http://www.dgp.toronto.edu/%7Epsimari">Patricio Simari</a></li>
-    <li><a href="http://www.dgp.toronto.edu/%7Ederek">Derek Nowrouzezahrai</a> </li>
-    <li><a href="http://www.dgp.toronto.edu/%7Ekaran">Karan Singh</a> </li>    
+    <li><a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a> </li>
+    <li><a href="https://www.dgp.toronto.edu/%7Epsimari">Patricio Simari</a></li>
+    <li><a href="https://www.dgp.toronto.edu/%7Ederek">Derek Nowrouzezahrai</a> </li>
+    <li><a href="https://www.dgp.toronto.edu/%7Ekaran">Karan Singh</a> </li>    
   </ul>
   <h2>Abstract</h2>
   <p align="justify">A robust statistics approach to curvature estimation on discretely sampled surfaces. The method exhibits accuracy, stability and consistency even for noisy, non-uniformly
@@ -94,7 +94,7 @@ BODY {
   <p align="justify"> This research prototype supports OFF files only.  You can get some help by typing  &quot;CurvatureX3 -?&quot;  (see also the FAQ section below). A quick example of use:  &quot;CurvatureX3 -dc -v mesh.off&quot;  (it will also compute derivatives of curvature  with verbose output and results are written in curv.txt). If the mesh is completely noiseless, you may also want to try  &quot;CurvatureX3 -n mesh.off&quot;  for faster results. The implementation is slow as it is not optimized and  is also based on the CGAL library. It may need several minutes and lots of memory to run for e.g. a 1M faces mesh. There are lots of improvements that I may perform in the future: a faster and less memory-consuming  implementation (e.g., based on the Trimesh2 library), an initial guess based on a one-ring discrete curvature estimate that may preserve sharp edges better, bugs correction etc. </p>
   <p align="left"><strong>Frequently Asked Questions:</strong><strong><br>
   </strong><em>- Question:&nbsp;</em>The program does not run.<br>
-  <em>- Answer:</em>&nbsp;Make sure you have BLAS.dll and LAPACK.dll in the same folder with the executable. Also try to install the  <a href="http://www.microsoft.com/downloads/details.aspx?familyid=A5C84275-3B97-4AB7-A40D-3802B2AF5FC2&displaylang=en">Microsoft Visual C++ Redistributable Package</a>. <br>
+  <em>- Answer:</em>&nbsp;Make sure you have BLAS.dll and LAPACK.dll in the same folder with the executable. Also try to install the  <a href="https://www.microsoft.com/downloads/details.aspx?familyid=A5C84275-3B97-4AB7-A40D-3802B2AF5FC2&displaylang=en">Microsoft Visual C++ Redistributable Package</a>. <br>
   </p>
   <p align="left"><em>- Question:&nbsp;</em>It says  &quot;Loaded mesh is empty or file format is not supported&quot;.<br>
     <em>- Answer:</em>&nbsp;Make sure your loaded mesh is text OFF format. Make sure your mesh is manifold.&nbsp;<br>
@@ -127,7 +127,7 @@ BODY {
   <p align="justify">We thank Eitan Grinspun for providing us with tessellations for our test surfaces, Guillaume Lavou&eacute; for the executable of his method and Ryan Schmidt for the implicit surface dog model.  We  thank Nigel Morris and Kyros Kutulakos for the fish point cloud. We also thank Hanson Robotics for the Einstein's head dataset. We acknowledge the AIM@SHAPE 3D library and its authors for the use of 3D models and point clouds.  We would like to thank Aaron Hertzmann and Eugene Fiume for their useful comments on the paper. We acknowledge the CGAL library which was used in our demo implementation. </p>
   <p align="justify"> This work has been funded by the National Sciences and Engineering Research Council of Canada (NSERC), the Ontario Ministry of Education and Training and the Canadian Research Network for Mathematics of Information Technology and Complex Systems (MITACS).    <br></p>  
   
-  <div id="footer"><a href="http://graphics.stanford.edu/%7Ekalo">back to Evangelos Kalogerakis' page</a></div>
+  <div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 
 
 </div>
