--- a/papers/ddcurvature/index.html
+++ b/papers/ddcurvature/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
 <title>Data-driven curvature for real-time line drawing</title>
@@ -31,12 +31,12 @@ BODY {
     <img align="middle" src="ddcurvature_teaser.jpg">
   <h2>People</h2>
   <ul id="people">
-    <li><a href="http://www.dgp.toronto.edu/%7Ekalo/">Evangelos Kalogerakis</a> </li>
-    <li><a href="http://www.dgp.toronto.edu/%7Ederek">Derek Nowrouzezahrai</a> </li>    
-    <li><a href="http://www.dgp.toronto.edu/%7Epsimari">Patricio Simari</a></li>
-    <li><a href="http://www.dgp.toronto.edu/%7Emccrae/">James McCrae</a> </li>
-    <li><a href="http://www.dgp.toronto.edu/%7Ekaran">Karan Singh</a> </li>    
-    <li><a href="http://www.dgp.toronto.edu/%7Ehertzman">Aaron Hertzmann</a> </li>        
+    <li><a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a> </li>
+    <li><a href="https://www.dgp.toronto.edu/%7Ederek">Derek Nowrouzezahrai</a> </li>    
+    <li><a href="https://www.dgp.toronto.edu/%7Epsimari">Patricio Simari</a></li>
+    <li><a href="https://www.dgp.toronto.edu/%7Emccrae/">James McCrae</a> </li>
+    <li><a href="https://www.dgp.toronto.edu/%7Ekaran">Karan Singh</a> </li>    
+    <li><a href="https://www.dgp.toronto.edu/%7Ehertzman">Aaron Hertzmann</a> </li>        
   </ul>
   <h2>Abstract</h2>
   <p align="justify">This paper presents a method for real-time line drawing of deforming objects. Object-space line
@@ -89,7 +89,7 @@ BODY {
     Canada (NSERC), the Ontario Ministry of Research and Innovation (MRI), the
     Ontario Ministry of Education and Training and the Canadian Research Network
     for Mathematics of Information Technology and Complex Systems (MITACS). </p>
-<div id="footer"><a href="http://www.dgp.toronto.edu/%7Ekalo">back to Evangelos Kalogerakis' page</a></div>  
+<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>  
 </div>
 </body>
 </html>
