--- a/papers/directshapeoptimization/index.html
+++ b/papers/directshapeoptimization/index.html
@@ -21,7 +21,7 @@
 	<div id="header">
 		<p id="people">
 			<a href="https://people.cs.umass.edu/~yhzhou/Site/Homepage.html">Yahan Zhou</a>,
-			<a href="https://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
 			<a href="https://people.cs.umass.edu/~ruiwang/">Rui Wang</a>,
 			<a href="https://mie.umass.edu/faculty/ian-grosse">Ian R. Grosse</a>
 		</p>	
