--- a/papers/graphicsOntologies/index.html
+++ b/papers/graphicsOntologies/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
 <title>Coupling ontologies with graphics content for Knowledge Driven Visualization</title>
@@ -31,9 +31,9 @@ BODY {
     <img align="right" src="graphicsOntologies_teaser.jpg" width="621" height="590">
   <h2>People</h2>
   <ul id="people">
-    <li><a href="http://www.dgp.toronto.edu/%7Ekalo/">Evangelos Kalogerakis</a> </li>
-    <li><a href="http://helios.ced.tuc.gr:8080/music/Controller?event=SHOW_PERSON&ID=10">Nektarios Moumoutzis</a></li>
-    <li><a href="http://helios.ced.tuc.gr:8080/music/Controller?event=SHOW_FACULTY&ID=2">Stavros Christodoulakis</a> </li>
+    <li><a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a> </li>
+    <li><a href="https://helios.ced.tuc.gr:8080/music/Controller?event=SHOW_PERSON&ID=10">Nektarios Moumoutzis</a></li>
+    <li><a href="https://helios.ced.tuc.gr:8080/music/Controller?event=SHOW_FACULTY&ID=2">Stavros Christodoulakis</a> </li>
   </ul>
   <h2>Abstract</h2>
   <p align="justify">A great challenge in information visualization  today is to provide models and software that effectively integrate the graphics  content of scenes with domain-specific knowledge so that the users can  effectively query, interpret, personalize and manipulate the visualized  information [1]. Moreover, it is important that the intelligent visualization  applications are interoperable in the semantic web environment and thus,  require that the models and software supporting them integrate state-of-the-art  international standards for knowledge representation, graphics and multimedia.  In this paper, we present a model, a methodology and a software framework for  the semantic web (Intelligent 3D Visualization Platform &ndash; I3DVP) for the  development of interoperable intelligent visualization applications that  support the coupling of graphics and virtual reality scenes with domain  knowledge of different domains. The graphics content and the semantics of the  scenes are married into a consistent and cohesive ontological model while at the  same time knowledge-based techniques for the querying, manipulation, and semantic  personalization of the scenes are introduced. We also provide methods for  knowledge driven information visualization and visualization-aided decision  making based on inference by reasoning.</p><br>
@@ -53,9 +53,9 @@ BODY {
   This archive contains a demo of the OWL ontology describing the X3D semantics that was developed in this project. 
   <br><br>
   <h2>Acknowledgements</h2>
-  <p>This project was funded under the European Union projects <a href="http://www.delos.info">Delos I and Delos II</a>. DELOS is a Network of Excellence on  Digital Libraries funded by the EU Sixth Framework Programme in the  frame of the Information Society Technologies Programme (IST).<br>  
+  <p>This project was funded under the European Union projects <a href="https://www.delos.info">Delos I and Delos II</a>. DELOS is a Network of Excellence on  Digital Libraries funded by the EU Sixth Framework Programme in the  frame of the Information Society Technologies Programme (IST).<br>  
   </p>
-<div id="footer"><a href="http://www.dgp.toronto.edu/%7Ekalo">back to Evangelos Kalogerakis' page</a></div>  
+<div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>  
 </div>
 </body>
 </html>
