--- a/papers/local_mvcnn/index.html
+++ b/papers/local_mvcnn/index.html
@@ -12,12 +12,12 @@
 		<p>Learning Local Shape Descriptors from Part Correspondences </p> With Multi-view Convolutional Networks	</h1>
 	<div id="header">
 		<p id="people">
-			<a href="http://people.cs.umass.edu/~hbhuang/">Haibin Huang</a><sup>1</sup>,
-			<a href="http://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a><sup>1</sup>,
+			<a href="https://people.cs.umass.edu/~hbhuang/">Haibin Huang</a><sup>1</sup>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a><sup>1</sup>,
 			<a href="https://www.cse.iitb.ac.in/~sidch/">Siddhartha Chaudhuri</a><sup>2</sup>,
-			<a href="http://www.duygu-ceylan.com/">Duygu Ceylan</a><sup>3</sup>,
-			<a href="http://vovakim.com/">Vladimir G. Kim</a><sup>3</sup>,
-			<a href="http://www.meyumer.com/"> M. Ersin Yumer </a><sup>3</sup>
+			<a href="https://www.duygu-ceylan.com/">Duygu Ceylan</a><sup>3</sup>,
+			<a href="https://vovakim.com/">Vladimir G. Kim</a><sup>3</sup>,
+			<a href="https://www.meyumer.com/"> M. Ersin Yumer </a><sup>3</sup>
 			
 		</p>
             <p>ACM Transactions on Graphics (TOG) 2017 (also presented in SIGGRAPH 2018).</p>	
@@ -38,8 +38,8 @@
 <!--
      <h2>Data</h2>
 		<p>The following archives contain the 3D models and the dense point correspondence we generated to train the LMVCNN</p>
-	<p><a href="http://neghvar.cs.umass.edu/public_data/haibin_huang_models.zip">Models.zip</a> 2GB</p>
-	<p><a href="http://neghvar.cs.umass.edu/public_data/haibin_huang_corr.zip">Corr.zip</a> 18GB</p>
+	<p><a href="https://neghvar.cs.umass.edu/public_data/haibin_huang_models.zip">Models.zip</a> 2GB</p>
+	<p><a href="https://neghvar.cs.umass.edu/public_data/haibin_huang_corr.zip">Corr.zip</a> 18GB</p>
 -->
      <h2>Presentation</h2>
 		<p><a href="./LMVCNNs.pptx">Slides</a></p> <p><a href="./LMVCNNs.pdf">PDF</a></p>
