--- a/papers/srpm/index.html
+++ b/papers/srpm/index.html
@@ -13,9 +13,9 @@
 	</h1>
 	<div id="header">
 		<p id="people">
-			<a href="http://people.cs.umass.edu/~hbhuang/">Haibin Huang</a><sup>1</sup>,
-			<a href="http://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a><sup>1</sup>,
-			<a href="http://www.meyumer.com/"> M. Ersin Yumer </a><sup>2</sup>,
+			<a href="https://people.cs.umass.edu/~hbhuang/">Haibin Huang</a><sup>1</sup>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a><sup>1</sup>,
+			<a href="https://www.meyumer.com/"> M. Ersin Yumer </a><sup>2</sup>,
 			<a href="https://research.adobe.com/person/radomir-mech/"> Radomir Mech </a><sup>2</sup>
 			
 		</p>
@@ -33,7 +33,7 @@ To circumvent this problem, we present a sketch-based approach to procedural mod
 The user can then select an output shape, or further modify the sketch to explore alternative ones. At the heart of our approach is a deep Convolutional Neural Network (CNN) that is trained to map sketches to procedural model parameters. The network is trained by large amounts of automatically generated synthetic line drawings.   
 By using  an intuitive medium i.e., freehand sketching as input,  users  are set free from manually adjusting procedural model parameters, yet they are still able to create high quality content. We demonstrate the accuracy and efficacy of our method in a  variety of procedural modeling scenarios including design of man-made and organic shape.</p>
 	<h2>Paper</h2>
-	<p><a href="http://people.cs.umass.edu/~kalo/papers/shapepmconvnet/shapepmconvnet.pdf"><img class="PaperFigure" alt="paper thumbnail" src="srpm_paper.jpg"></a></p>
+	<p><a href="https://kalo-ai.github.io/papers/shapepmconvnet/shapepmconvnet.pdf"><img class="PaperFigure" alt="paper thumbnail" src="srpm_paper.jpg"></a></p>
        <a href="ShapeSynthesisPMCNN.bib">[Bibtex]</a>
         <h2>Supplementary Material</h2>
         <p><a href="supp_material.pdf"> More results</a>, 40M</p>
