--- a/papers/bsm/index.html
+++ b/papers/bsm/index.html
@@ -13,9 +13,9 @@
 	</h1>
 	<div id="header">
 		<p id="people">
-			<a href="http://people.cs.umass.edu/~hbhuang/">Haibin Huang</a>,
-			<a href="http://people.cs.umass.edu/~kalo/">Evangelos Kalogerakis</a>,
-			<a href="http://openscholar.cs.umass.edu/marlin/">Benjamin Marlin</a>
+			<a href="https://people.cs.umass.edu/~hbhuang/">Haibin Huang</a>,
+			<a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>,
+			<a href="https://openscholar.cs.umass.edu/marlin/">Benjamin Marlin</a>
 		</p>	
        <p><span class="Affiliation">University of Massachusetts Amherst</span></p>
 
@@ -32,11 +32,11 @@
        <a href="BetaShapeMachine.bib">[Bibtex]</a>
        
        <h2>Supplementary Material</h2>
-	<p><a href="http://antares.cs.umass.edu/project_data/bsm/Correspondence.7z"> Correspondence.7z</a>,1.4GB</p>
+	<p><a href="https://drive.google.com/file/d/1VOIa0Gkajsa_QAEaypAFPSHsVTUU3tog/view?usp=sharing"> Correspondence.7z</a>,1.4GB</p>
     <p>This archive contains the correspondence results from our method for BCHP dataset. Please see readme.txt in this archive for more information</p>
-       <p><a href="http://antares.cs.umass.edu/project_data/bsm/Segmentation.7z"> Segmentation.7z</a>, 180MB</p>
+       <p><a href="https://drive.google.com/file/d/1BM4sNTqTqNBVx04xm-MBzbewTVN6OLzC/view?usp=sharing"> Segmentation.7z</a>, 180MB</p>
     <p>This archive contains the ground-truth segmentations of the BCHP dataset and segmentation results from our method. Please see readme.txt in this archive for more information</p>
-       <p><a href="http://antares.cs.umass.edu/project_data/bsm/FineGrainedClassification.7z"> FineGrainedClassification.7z</a>, 24MB</p>
+       <p><a href="https://drive.google.com/file/d/1JgObAzClNLimYGV78v5dJnKbPa-lU4OJ/view?usp=sharing"> FineGrainedClassification.7z</a>, 24MB</p>
     <p>This archive contains the fine-grained classification dataset with training and test split, our results and learned descriptors. Please see readme.txt in this archive for more information</p>
        <p><a href="SourceCode.7z"> SourceCode.7z</a></p>
     <p>This archive contains source code for our deep-learned model (Beta Shape Machine).</p>
