--- a/papers/images2gps/index.html
+++ b/papers/images2gps/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
 <title>Image Sequence Geolocation with Human Travel Priors</title>
@@ -31,11 +31,11 @@ BODY {
   </center>
   <h2>People</h2>
   <ul id="people">
-    <li><a href="http://www.dgp.toronto.edu/%7Ekalo/">Evangelos Kalogerakis</a> </li>
+    <li><a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a> </li>
     <li>Olga Vesselova</li>
-    <li><a href="http://www.cs.cmu.edu/%7Ejhhays/">James Hays</a></li>
-    <li><a href="http://www.cs.cmu.edu/%7Eefros/">Alexei Efros</a> </li>
-    <li><a href="http://www.dgp.toronto.edu/%7Ehertzman/">Aaron Hertzmann</a> </li>    
+    <li><a href="https://www.cs.cmu.edu/%7Ejhhays/">James Hays</a></li>
+    <li><a href="https://www.cs.cmu.edu/%7Eefros/">Alexei Efros</a> </li>
+    <li><a href="https://www.dgp.toronto.edu/%7Ehertzman/">Aaron Hertzmann</a> </li>    
   </ul>
   <h2>Abstract</h2>
   <p> This paper presents a method for estimating geographic
@@ -77,7 +77,7 @@ BODY {
   Google, Microsoft Research, NSERC, NSF grants IIS-0546547
   and CCF-0541230, and the Ontario MRI. Thanks to Clauset et
   al. for providing their power-law fitting code online.
-  <div id="footer"><a href="http://www.dgp.toronto.edu/%7Ekalo">back to Evangelos Kalogerakis' page</a></div>
+  <div id="footer"><a href="https://kalo-ai.github.io/">back to Evangelos Kalogerakis' page</a></div>
 </div>
 </body>
 </html>
