--- a/papers/viewbasedcnn/index.html
+++ b/papers/viewbasedcnn/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=http://vis-www.cs.umass.edu/mvcnn/" />
+<meta http-equiv="refresh" content="0; url=https://vis-www.cs.umass.edu/mvcnn/" />
 <title>Multi-view Convolutional Neural Networks 
 for 3D Shape Recognition</title>
 <link media="all" href="style.css" type="text/css" rel="StyleSheet">
@@ -28,7 +28,7 @@ BODY {
 <body>
 <div id="content">
   <p><strong>Redirecting to:</strong></p>
-  <p><a href="http://vis-www.cs.umass.edu/mvcnn/">http://vis-www.cs.umass.edu/mvcnn/</a> <br>
+  <p><a href="https://vis-www.cs.umass.edu/mvcnn/">https://vis-www.cs.umass.edu/mvcnn/</a> <br>
   (click the link above if your browser does not redirect you)</p>
 </div>
 </body>
